# professions-llm-parser

./: README.md  main.py  professions.txt  pyproject.toml
app_io/: writers.py
domain/: dto.py  enums.py
out_llm_generated/: professions-global.json
providers/: openai_professions_provider.py
